icono y cositas cambiadas

--- a/Maxim/index.html
+++ b/Maxim/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Maxim - Modern One Page Bootstrap Template</title>
+	<title>Book Recommender</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -28,7 +28,7 @@
 					<!-- Responsive navbar -->
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</a>
-					<h1 class="brand"><a href="index.html">Maxim</a></h1>
+					<h1 class="brand"><a href="index.html">Book Recommender</a></h1>
 					<!-- navigation -->
 					<nav class="pull-right nav-collapse collapse">
 						<ul id="menu-main" class="nav">
@@ -57,17 +57,17 @@
 							<ul class="slides">
 								<li>
 									<p class="home-slide-content">
-										<strong>creative</strong> and passion
+										We love <strong>books</strong>
 									</p>
 								</li>
 								<li>
 									<p class="home-slide-content">
-										Eat and drink <strong>design</strong>
+										<strong>creative</strong> and passion										
 									</p>
 								</li>
 								<li>
 									<p class="home-slide-content">
-										We loves <strong>simplicity</strong>
+										Novels <strong>and love</strong>
 									</p>
 								</li>
 							</ul>
@@ -118,16 +118,16 @@
 				<div class="span2 offset1 flyIn">
 					<div class="people">
 						<img class="team-thumb img-circle" src="img/team/img-1.jpg" alt="" />
-						<h3>John Doe</h3>
+						<h3>Mariana Mendivil Duque</h3>
 						<p>
-							Art director
+							Programmer - Designer
 						</p>
 					</div>
 				</div>
 				<div class="span2 flyIn">
 					<div class="people">
 						<img class="team-thumb img-circle" src="img/team/img-2.jpg" alt="" />
-						<h3>Mike Doe</h3>
+						<h3>Juan Camilo Puma</h3>
 						<p>
 							Web developer
 						</p>
@@ -136,7 +136,7 @@
 				<div class="span2 flyIn">
 					<div class="people">
 						<img class="team-thumb img-circle" src="img/team/img-3.jpg" alt="" />
-						<h3>Neil Doe</h3>
+						<h3>Glam unicorn Larry</h3>
 						<p>
 							Web designer
 						</p>
@@ -145,7 +145,7 @@
 				<div class="span2 flyIn">
 					<div class="people">
 						<img class="team-thumb img-circle" src="img/team/img-4.jpg" alt="" />
-						<h3>Mark Joe</h3>
+						<h3>Azure raccoon</h3>
 						<p>
 							UI designer
 						</p>
@@ -154,7 +154,7 @@
 				<div class="span2 flyIn">
 					<div class="people">
 						<img class="team-thumb img-circle" src="img/team/img-5.jpg" alt="" />
-						<h3>Stephen B</h3>
+						<h3>Google dinosaur</h3>
 						<p>
 							Digital imaging
 						</p>
@@ -168,13 +168,13 @@
 	<!-- section: services -->
 	<section id="services" class="section orange">
 		<div class="container">
-			<h4>Services</h4>
+			<h4>Categories</h4>
 			<!-- Four columns -->
 			<div class="row">
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
 						<img src="img/icons/laptop.png" alt="" />
-						<h2>Web design</h2>
+						<h2>Web design Books</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 						</p>
@@ -183,7 +183,7 @@
 				<div class="span3 animated flyIn">
 					<div class="service-box">
 						<img src="img/icons/lab.png" alt="" />
-						<h2>Web development</h2>
+						<h2>Science Books</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 						</p>
@@ -192,7 +192,7 @@
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
 						<img src="img/icons/camera.png" alt="" />
-						<h2>Photography</h2>
+						<h2>Photography Books</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 						</p>
@@ -201,7 +201,7 @@
 				<div class="span3 animated-slow flyIn">
 					<div class="service-box">
 						<img src="img/icons/basket.png" alt="" />
-						<h2>Ecommerce</h2>
+						<h2>Fantasy books</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 						</p>
