--- a/Maxim/index.html
+++ b/Maxim/index.html
@@ -28,7 +28,7 @@
 					<!-- Responsive navbar -->
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</a>
-					<h1 class="brand"><a href="index.html">Book Recommender</a></h1>
+					<h1 class="brand"><img id="brandimage" src="img/logo-image.png"><a href="index.html"></a></img></h1>
 					<!-- navigation -->
 					<nav class="pull-right nav-collapse collapse">
 						<ul id="menu-main" class="nav">
