ahi esta tu f** img

--- a/Maxim/index.html
+++ b/Maxim/index.html
@@ -108,7 +108,7 @@
 				</div>
 				<div class="span6">
 					<div class="aligncenter">
-						<img src="img/openBoopsk.png" alt="" />
+						<img src="img/icons/creativity.png" alt="" />
 					</div>
 				</div>
 			</div>
