--- a/Maxim/index.html
+++ b/Maxim/index.html
@@ -33,7 +33,7 @@
 					<nav class="pull-right nav-collapse collapse">
 						<ul id="menu-main" class="nav">
 							<li><a title="team" href="#about">About</a></li>
-							<li><a title="services" href="#services">Services</a></li>
+							<li><a title="services" href="#services">Categories</a></li>
 							<li><a title="contact" href="#contact">Contact</a></li>
 							<!-- <li><a href="page.html">Page</a></li> -->
 						</ul>
@@ -171,7 +171,7 @@
 			<div class="row">
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<img src="img/icons/alien.png" alt="" />
+						<a href="pages/literature.html"><img src="img/icons/alien.png" alt="" /></a>						
 						<h2>Literature and fiction</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -180,7 +180,7 @@
 				</div>
 				<div class="span3 animated flyIn">
 					<div class="service-box">
-						<img src="img/icons/lab.png" alt="" />
+						<a href="pages/science.html"><img src="img/icons/lab.png" alt="" /></a>
 						<h2>Science Books</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -189,7 +189,7 @@
 				</div>
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<img src="img/icons/mona-lisa.png" alt="" />
+						<a href="pages/photography.html"><img src="img/icons/mona-lisa.png" alt="" /></a>						
 						<h2>Photography Books</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -198,7 +198,7 @@
 				</div>
 				<div class="span3 animated-slow flyIn">
 					<div class="service-box">
-						<img src="img/icons/superhero.png" alt="" />
+						<a href="pages/fantasy.html"><img src="img/icons/superhero.png" alt="" /></a>
 						<h2>Fantasy books</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -209,7 +209,7 @@
 		</div>
 	</section> 
 	<!-- end section: services -->
-	<!-- section: works
+	<!-- section: works -->
 	
 	<!-- spacer section -->
 	<section class="spacer bg3">
