--- a/Maxim/index.html
+++ b/Maxim/index.html
@@ -304,6 +304,7 @@
 	<script src="js/inview.js"></script>
 	<script src="js/animate.js"></script>
 	<script src="js/custom.js"></script>
+	<script src="js/main.js"></script>
 	<script src="contactform/contactform.js"></script>
 
 </body>
