--- a/Maxim/index.html
+++ b/Maxim/index.html
@@ -171,8 +171,8 @@
 			<div class="row">
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<a href="pages/literature.html"><img src="img/icons/alien.png" alt="" /></a>						
-						<h2>Literature and fiction</h2>
+						<a href="pages/category.html?subject=fiction"><img src="img/icons/alien.png" alt="" /></a>						
+						<h2>Fiction</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 						</p>
@@ -180,7 +180,7 @@
 				</div>
 				<div class="span3 animated flyIn">
 					<div class="service-box">
-						<a href="pages/science.html"><img src="img/icons/lab.png" alt="" /></a>
+						<a href="pages/category.html?subject=science"><img src="img/icons/lab.png" alt="" /></a>
 						<h2>Science Books</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -189,7 +189,7 @@
 				</div>
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<a href="pages/photography.html"><img src="img/icons/mona-lisa.png" alt="" /></a>						
+						<a href="pages/category.html?subject=photography"><img src="img/icons/mona-lisa.png" alt="" /></a>						
 						<h2>Photography Books</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -198,7 +198,7 @@
 				</div>
 				<div class="span3 animated-slow flyIn">
 					<div class="service-box">
-						<a href="pages/fantasy.html"><img src="img/icons/superhero.png" alt="" /></a>
+						<a href="pages/category.html?subject=fantasy"><img src="img/icons/superhero.png" alt="" /></a>
 						<h2>Fantasy books</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -304,7 +304,7 @@
 	<script src="js/inview.js"></script>
 	<script src="js/animate.js"></script>
 	<script src="js/custom.js"></script>
-	<script src="js/main.js"></script>
+	<!-- <script src="js/main.js"></script> -->
 	<script src="contactform/contactform.js"></script>
 
 </body>
