--- a/Maxim/pages/category.html
+++ b/Maxim/pages/category.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fantasy</title>
+    <title>Category</title>
 </head>
 <body>
     <div id="fantasy"></div>
-    <script src="../js/main.js" type="text/javascript"></script>
+    <script src="../js/main.js" type="text/javascript">
+    </script>
 </body>
 </html>
