--- a/Maxim/pages/category.html
+++ b/Maxim/pages/category.html
@@ -4,11 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Category</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-    <div id="fantasy"></div>
-    <script src="../js/main.js" type="text/javascript">
-    </script>
+    <div id="category"></div>
+    <div class="container">
+        <div class="row" id= "rowbebe">
+            <!-- <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="img\blue.jpg" alt="card image cap" />
+                </div>
+                <div class="card-body">
+                    <p>Game boy azul</p>
+                    <p>10000</p>
+                    <button class="btn btn-primary">Add to Cart</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="img\purple.jpg" alt="card image cap" />
+                </div>
+                <div class="card-body">
+                    <p>Game boy morado</p>
+                    <p>900000</p>
+                    <button class="btn btn-primary">Add to Cart</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="img\yellow.jpg" alt="card image cap" />
+                </div>
+                <div class="card-body">
+                    <p>Game boy amarillo</p>
+                    <p>8000000</p>
+                    <button class="btn btn-primary">Add to Cart</button>
+                </div>
+            </div> -->
+        </div>
+        <!-- <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="img\green.jpg" alt="card image cap" />
+                </div>
+                <div class="card-body">
+                    <p>Game boy verde</p>
+                    <p>50000</p>
+                    <button class="btn btn-primary">Add to Cart</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="img\blue.jpg" alt="card image cap" />
+                </div>
+                <div class="card-body">
+                    <p>Game boy azul</p>
+                    <p>900000</p>
+                    <button class="btn btn-primary">Add to Cart</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="img\purple.jpg" alt="card image cap" />
+                </div>
+                <div class="card-body">
+                    <p>Game boy morado</p>
+                    <p>8000000</p>
+                    <button class="btn btn-primary">Add to Cart</button>
+                </div>
+            </div>
+        </div> -->
+    </div>
+    <script src="../js/main.js" type="text/javascript"></script>
 </body>
 </html>
