--- a/Maxim/index.html
+++ b/Maxim/index.html
@@ -292,6 +292,7 @@
 		</div>
 		<!-- ./container -->
 	</footer>
+	
 	<a href="#" class="scrollup"><i class="icon-angle-up icon-square icon-bgdark icon-2x"></i></a>
 	<script src="js/jquery.js"></script>
 	<script src="js/jquery.scrollTo.js"></script>
@@ -306,6 +307,8 @@
 	<script src="js/custom.js"></script>
 	<!-- <script src="js/main.js"></script> -->
 	<script src="contactform/contactform.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" ></script>
+
 
 </body>
 
