--- a/Maxim/pages/category.html
+++ b/Maxim/pages/category.html
@@ -5,11 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" type="text/css" href="../css/category.css">
 </head>
 <body>
     <div id="category"></div>
+
     <div class="container">
         <div class="row" id= "rowbebe">
+        	<div class="mdc-card">
+                <div class="card_primary">
+                    <h1>Title</h1>
+                </div>
+                <div class="card_secundary">
+                    <h2>Authors</h2>
+                </div>
+                
+                <!-- ... content ... -->
+                <div class="mdc-card__actions">
+                    <div class="mdc-card__action-icons">
+                    	<button class="mdc-icon-button mdc-card__action mdc-card__action--icon" aria-pressed="false" aria-label="Add to favorites" title="Add to favorites">
+					   <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">favorite</i>
+					   <i class="material-icons mdc-icon-button__icon">favorite_border</i>
+					  </button>
+                        <button class="material-icons mdc-icon-button mdc-card_action mdc-card_action--icon" title="Share">share</button>
+                        <button class="material-icons mdc-icon-button mdc-card_action mdc-card_action--icon" title="More options">more_vert</button>
+                    </div>
+                </div>
+            </div>
             <!-- <div class="col-md-4">
                 <div class="card">
                     <img class="card-img-top" src="img\blue.jpg" alt="card image cap" />
@@ -74,6 +98,8 @@
             </div>
         </div> -->
     </div>
+    <script src="../js/jquery.js"></script>
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <script src="../js/main.js" type="text/javascript"></script>
 </body>
 </html>
