--- a/Maxim/pages/category.html
+++ b/Maxim/pages/category.html
@@ -14,15 +14,14 @@
 
     <div class="container">
         <div class="row" id= "rowbebe">
-        	<div class="mdc-card">
+        <!--	<div class="mdc-card">
                 <div class="card_primary">
-                    <h1>Title</h1>
+                    Title
                 </div>
-                <div class="card_secundary">
-                    <h2>Authors</h2>
+                <div class="card_secondary">
+                    Authors
                 </div>
-                
-                <!-- ... content ... -->
+              
                 <div class="mdc-card__actions">
                     <div class="mdc-card__action-icons">
                     	<button class="mdc-icon-button mdc-card__action mdc-card__action--icon" aria-pressed="false" aria-label="Add to favorites" title="Add to favorites">
@@ -32,68 +31,6 @@
                         <button class="material-icons mdc-icon-button mdc-card_action mdc-card_action--icon" title="Share">share</button>
                         <button class="material-icons mdc-icon-button mdc-card_action mdc-card_action--icon" title="More options">more_vert</button>
                     </div>
-                </div>
-            </div>
-            <!-- <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="img\blue.jpg" alt="card image cap" />
-                </div>
-                <div class="card-body">
-                    <p>Game boy azul</p>
-                    <p>10000</p>
-                    <button class="btn btn-primary">Add to Cart</button>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="img\purple.jpg" alt="card image cap" />
-                </div>
-                <div class="card-body">
-                    <p>Game boy morado</p>
-                    <p>900000</p>
-                    <button class="btn btn-primary">Add to Cart</button>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="img\yellow.jpg" alt="card image cap" />
-                </div>
-                <div class="card-body">
-                    <p>Game boy amarillo</p>
-                    <p>8000000</p>
-                    <button class="btn btn-primary">Add to Cart</button>
-                </div>
-            </div> -->
-        </div>
-        <!-- <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="img\green.jpg" alt="card image cap" />
-                </div>
-                <div class="card-body">
-                    <p>Game boy verde</p>
-                    <p>50000</p>
-                    <button class="btn btn-primary">Add to Cart</button>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="img\blue.jpg" alt="card image cap" />
-                </div>
-                <div class="card-body">
-                    <p>Game boy azul</p>
-                    <p>900000</p>
-                    <button class="btn btn-primary">Add to Cart</button>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="img\purple.jpg" alt="card image cap" />
-                </div>
-                <div class="card-body">
-                    <p>Game boy morado</p>
-                    <p>8000000</p>
-                    <button class="btn btn-primary">Add to Cart</button>
                 </div>
             </div>
         </div> -->
