--- a/Maxim/pages/category.html
+++ b/Maxim/pages/category.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="../css/category.css">
+    <link rel="shortcut icon" href="../img/logo-dark.png">
 </head>
 <body>
     <div id="category"></div>
