--- a/Maxim/index.html
+++ b/Maxim/index.html
@@ -174,7 +174,7 @@
 						<a href="pages/category.html?subject=fiction"><img src="img/icons/alien.png" alt="" /></a>						
 						<h2>Fiction</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							“It's no wonder that thruth is stranger than fiction.Fiction has to make sense.” <br> -MARK TWAIN
 						</p>
 					</div>
 				</div>
@@ -183,7 +183,7 @@
 						<a href="pages/category.html?subject=science"><img src="img/icons/lab.png" alt="" /></a>
 						<h2>Science Books</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							"We live in a society exquisitely dependent on science and technology, in which hardly anyone knows anything about science and technology." <br> -CARL SAGAN
 						</p>
 					</div>
 				</div>
@@ -192,7 +192,7 @@
 						<a href="pages/category.html?subject=photography"><img src="img/icons/mona-lisa.png" alt="" /></a>						
 						<h2>Photography Books</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							“When words become unclear, I shall focus with photographs. When images become inadequate, I shall be content with silence.” <br> -ANSEL ADAMS
 						</p>
 					</div>
 				</div>
@@ -201,7 +201,7 @@
 						<a href="pages/category.html?subject=fantasy"><img src="img/icons/superhero.png" alt="" /></a>
 						<h2>Fantasy books</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							"Excelsior" <br> -STAN LEE
 						</p>
 					</div>
 				</div>
